internal/gatewayapi/testdata/backendtrafficpolicy-with-ratelimit-invalid-multiple-source-cidr.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    namespace: default
    name: grpcroute
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service
        port: 8080
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: envoy-gateway
    name: policy-for-gateway
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
    rateLimit:
      type: Global
      global:
        rules:
        - clientSelectors:
          - sourceCIDR:
              value: 192.168.0.0/16
              type: Distinct
          - sourceCIDR:
              value: 10.0.0.0/8
              invert: true
          limit:
            requests: 10
            unit: Hour
